; macOS Cram Tests

(cram
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (deps %{bin:dwarfdump}))

(cram
 (deps %{bin:objdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64"))))

; TODO Replace these with better scripted version, our addresses change
; (cram
;  (deps
;   %{bin:addr2line}
;   ../fixtures/hello_world
;   ../fixtures/hello_world.dSYM)
;  (enabled_if
;   (and
;    (= %{system} "macosx")
;    (= %{architecture} "arm64"))))

; =============================================================================
; DWARFDUMP COMPARISON TESTS - MACOS
; =============================================================================

; --debug-str comparison

(rule
 (alias runtest)
 (target ocaml_debug_str.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-str
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_str.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-str ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_str.out system_debug_str.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_str.out ocaml_debug_str.out)))

; --debug-str-offsets comparison

(rule
 (alias runtest)
 (target ocaml_debug_str_offsets.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-str-offsets
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_str_offsets.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-str-offsets ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_str_offsets.out system_debug_str_offsets.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_str_offsets.out ocaml_debug_str_offsets.out)))

; --debug-abbrev comparison

(rule
 (alias runtest)
 (target ocaml_debug_abbrev.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-abbrev
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_abbrev.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-abbrev ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_abbrev.out system_debug_abbrev.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_abbrev.out ocaml_debug_abbrev.out)))

; --debug-info comparison

(rule
 (alias runtest)
 (target ocaml_debug_info.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-info
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_info.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-info ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_info.out system_debug_info.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_info.out ocaml_debug_info.out)))

; --debug-addr comparison

(rule
 (alias runtest)
 (target ocaml_debug_addr.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-addr
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_addr.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-addr ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_addr.out system_debug_addr.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_addr.out ocaml_debug_addr.out)))

; --debug-line comparison

(rule
 (alias runtest)
 (target ocaml_debug_line.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-line
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_line.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-line ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_line.out system_debug_line.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_line.out ocaml_debug_line.out)))

; --debug-names comparison (C file)

(rule
 (alias runtest)
 (target ocaml_debug_names.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-names
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_names.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-names ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_names.out system_debug_names.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_names.out ocaml_debug_names.out)))

; --debug-names comparison (C++ file)

(rule
 (alias runtest)
 (target ocaml_debug_names_cpp.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world_cpp)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-names
    "../fixtures/hello_world_cpp.dSYM/Contents/Resources/DWARF/hello_world_cpp"))))

(rule
 (alias runtest)
 (target system_debug_names_cpp.out)
 (deps ../fixtures/hello_world_cpp)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-names ../fixtures/hello_world_cpp.dSYM/Contents/Resources/DWARF/hello_world_cpp"))))

(rule
 (alias runtest)
 (deps ocaml_debug_names_cpp.out system_debug_names_cpp.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_names_cpp.out ocaml_debug_names_cpp.out)))

; --debug-macro comparison

(rule
 (alias runtest)
 (target ocaml_debug_macro.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world_cpp)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-macro
    "../fixtures/hello_world_cpp.dSYM/Contents/Resources/DWARF/hello_world_cpp"))))

(rule
 (alias runtest)
 (target system_debug_macro.out)
 (deps ../fixtures/hello_world_cpp)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   ; TODO Trim output, we don't support split DWO files yet.
   (system
    "dwarfdump --debug-macro ../fixtures/hello_world_cpp.dSYM/Contents/Resources/DWARF/hello_world_cpp | head -n 3"))))

(rule
 (alias runtest)
 (deps ocaml_debug_macro.out system_debug_macro.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_macro.out ocaml_debug_macro.out)))

; =============================================================================
; OBJDUMP COMPARISON TESTS - MACOS
; =============================================================================

; --unwind-info comparison (hello_world)

(rule
 (alias runtest)
 (target ocaml_unwind_info.out)
 (deps %{bin:objdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:objdump} --unwind-info "../fixtures/hello_world"))))

(rule
 (alias runtest)
 (target system_unwind_info.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system "objdump --unwind-info ../fixtures/hello_world"))))

; --unwind-info comparison (hello_world_cpp)

(rule
 (alias runtest)
 (target ocaml_unwind_info_cpp.out)
 (deps %{bin:objdump} ../fixtures/hello_world_cpp)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:objdump} --unwind-info "../fixtures/hello_world_cpp"))))

(rule
 (alias runtest)
 (target system_unwind_info_cpp.out)
 (deps ../fixtures/hello_world_cpp)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system "objdump --unwind-info ../fixtures/hello_world_cpp"))))

; Diff comparisons for unwind-info

(rule
 (alias runtest)
 (deps ocaml_unwind_info.out system_unwind_info.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_unwind_info.out ocaml_unwind_info.out)))

(rule
 (alias runtest)
 (deps ocaml_unwind_info_cpp.out system_unwind_info_cpp.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_unwind_info_cpp.out ocaml_unwind_info_cpp.out)))

; --debug-line-str comparison

(rule
 (alias runtest)
 (target ocaml_debug_line_str.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-line-str
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_line_str.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-line-str ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_line_str.out system_debug_line_str.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_line_str.out ocaml_debug_line_str.out)))

; --debug-aranges comparison

(rule
 (alias runtest)
 (target ocaml_debug_aranges.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-aranges
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_aranges.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-aranges ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_aranges.out system_debug_aranges.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_aranges.out ocaml_debug_aranges.out)))

; --debug-loclists comparison

(rule
 (alias runtest)
 (target ocaml_debug_loclists.out)
 (deps %{bin:dwarfdump} ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:dwarfdump}
    --debug-loclists
    "../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (target system_debug_loclists.out)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --debug-loclists ../fixtures/hello_world.dSYM/Contents/Resources/DWARF/hello_world"))))

(rule
 (alias runtest)
 (deps ocaml_debug_loclists.out system_debug_loclists.out)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff system_debug_loclists.out ocaml_debug_loclists.out)))

; Error handling test for directory input

(rule
 (alias runtest)
 (target directory_error_test.out)
 (deps %{bin:dwarfdump})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stderr-to
   %{target}
   (system "%{bin:dwarfdump} --debug-loclists . || true"))))

; =============================================================================
; GNU-DWARFDUMP COMPARISON TESTS - LINUX
; =============================================================================

; --debug-line comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_line.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-line ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_line.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-lines ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_line.out system_dwarfdump_line.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_line.out ocaml_dwarfdump_line.out)))

; --debug-info comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_info.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-info ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_info.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-info ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_info.out system_dwarfdump_info.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_info.out ocaml_dwarfdump_info.out)))

; --debug-str comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_str.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-str ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_str.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-strings ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_str.out system_dwarfdump_str.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_str.out ocaml_dwarfdump_str.out)))

; --debug-str comparison (C++ binary)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_str_cpp.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-str ../fixtures/hello_world_cpp_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_str_cpp.out)
 (deps ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-strings ../fixtures/hello_world_cpp_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_str_cpp.out system_dwarfdump_str_cpp.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_str_cpp.out ocaml_dwarfdump_str_cpp.out)))

; --debug-str-offsets comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_str_offsets.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-str-offsets
    ../fixtures/hello_world_cpp_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_str_offsets.out)
 (deps ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-str-offsets ../fixtures/hello_world_cpp_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_str_offsets.out system_dwarfdump_str_offsets.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_str_offsets.out ocaml_dwarfdump_str_offsets.out)))

; --debug-abbrev comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_abbrev.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-abbrev ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_abbrev.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump -b ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_abbrev.out system_dwarfdump_abbrev.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_abbrev.out ocaml_dwarfdump_abbrev.out)))

; --debug-names comparison
; TODO: Find or create a program that generates .debug_names section

; (rule
;  (alias runtest)
;  (target ocaml_dwarfdump_names.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (run
;     %{bin:gnu-dwarfdump}
;     --debug-names
;     ../fixtures/hello_world_linux))))

; (rule
;  (alias runtest)
;  (target system_dwarfdump_names.out)
;  (deps ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (system
;     "dwarfdump --print-debug-names ../fixtures/hello_world_linux"))))

; (rule
;  (alias runtest)
;  (deps ocaml_dwarfdump_names.out system_dwarfdump_names.out)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (diff system_dwarfdump_names.out ocaml_dwarfdump_names.out)))

; --debug-names comparison (C++ file)
; TODO: Same as above - need program that generates .debug_names section

; (rule
;  (alias runtest)
;  (target ocaml_dwarfdump_names_cpp.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_cpp_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (run
;     %{bin:gnu-dwarfdump}
;     --debug-names
;     ../fixtures/hello_world_cpp_linux))))

; (rule
;  (alias runtest)
;  (target system_dwarfdump_names_cpp.out)
;  (deps ../fixtures/hello_world_cpp_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (system
;     "dwarfdump --print-debug-names ../fixtures/hello_world_cpp_linux"))))

; (rule
;  (alias runtest)
;  (deps
;   ocaml_dwarfdump_names_cpp.out
;   system_dwarfdump_names_cpp.out)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (diff
;    system_dwarfdump_names_cpp.out
;    ocaml_dwarfdump_names_cpp.out)))

; --debug-macro comparison
; TODO: Find or create a program that generates .debug_macro section

; (rule
;  (alias runtest)
;  (target ocaml_dwarfdump_macro.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (run
;     %{bin:gnu-dwarfdump}
;     --debug-macro
;     ../fixtures/hello_world_linux))))

; (rule
;  (alias runtest)
;  (target system_dwarfdump_macro.out)
;  (deps ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (system
;     "dwarfdump -m ../fixtures/hello_world_linux"))))

; (rule
;  (alias runtest)
;  (deps ocaml_dwarfdump_macro.out system_dwarfdump_macro.out)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (diff system_dwarfdump_macro.out ocaml_dwarfdump_macro.out)))

; --debug-line-str comparison
; NOTE: System dwarfdump does not have a specific flag for
; .debug_line_str section

; (rule
;  (alias runtest)
;  (target ocaml_dwarfdump_line_str.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (run
;     %{bin:gnu-dwarfdump}
;     --debug-line-str
;     ../fixtures/hello_world_linux))))

; (rule
;  (alias runtest)
;  (target system_dwarfdump_line_str.out)
;  (deps ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (system
;     "dwarfdump -l ../fixtures/hello_world_linux"))))

; (rule
;  (alias runtest)
;  (deps
;   ocaml_dwarfdump_line_str.out
;   system_dwarfdump_line_str.out)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (diff
;    system_dwarfdump_line_str.out
;    ocaml_dwarfdump_line_str.out)))

; --debug-aranges comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_aranges.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-aranges ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_aranges.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump -r ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_aranges.out system_dwarfdump_aranges.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_aranges.out ocaml_dwarfdump_aranges.out)))

; --debug-loclists comparison
; TODO: Find or create a program that generates .debug_loclists

; (rule
;  (alias runtest)
;  (target ocaml_dwarfdump_loclists.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (run
;     %{bin:gnu-dwarfdump}
;     --debug-loclists
;     ../fixtures/hello_world_linux))))

; (rule
;  (alias runtest)
;  (target system_dwarfdump_loclists.out)
;  (deps ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (system
;     "dwarfdump -c ../fixtures/hello_world_linux"))))

; (rule
;  (alias runtest)
;  (deps
;   ocaml_dwarfdump_loclists.out
;   system_dwarfdump_loclists.out)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (diff
;    system_dwarfdump_loclists.out
;    ocaml_dwarfdump_loclists.out)))

; --debug-addr comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_addr.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-addr ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_addr.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "llvm-dwarfdump --debug-addr ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_addr.out system_dwarfdump_addr.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_addr.out ocaml_dwarfdump_addr.out)))

; --debug-addr comparison (C++ file)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_addr_cpp.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --debug-addr ../fixtures/hello_world_cpp_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_addr_cpp.out)
 (deps ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "llvm-dwarfdump --debug-addr ../fixtures/hello_world_cpp_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_addr_cpp.out system_dwarfdump_addr_cpp.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_addr_cpp.out ocaml_dwarfdump_addr_cpp.out)))

; =============================================================================
; DWARF64 FORMAT TESTS - LINUX
; =============================================================================

; --debug-info comparison (DWARF64)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_info_dwarf64.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-info
    ../fixtures/hello_world_dwarf64_cpp))))

(rule
 (alias runtest)
 (target system_dwarfdump_info_dwarf64.out)
 (deps ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-info ../fixtures/hello_world_dwarf64_cpp"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_info_dwarf64.out system_dwarfdump_info_dwarf64.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_info_dwarf64.out ocaml_dwarfdump_info_dwarf64.out)))

; --debug-line comparison (DWARF64)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_line_dwarf64.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-line
    ../fixtures/hello_world_dwarf64_cpp))))

(rule
 (alias runtest)
 (target system_dwarfdump_line_dwarf64.out)
 (deps ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-lines ../fixtures/hello_world_dwarf64_cpp"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_line_dwarf64.out system_dwarfdump_line_dwarf64.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_line_dwarf64.out ocaml_dwarfdump_line_dwarf64.out)))

; --debug-str-offsets comparison (DWARF64)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_str_offsets_dwarf64.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-str-offsets
    ../fixtures/hello_world_dwarf64_cpp))))

(rule
 (alias runtest)
 (target system_dwarfdump_str_offsets_dwarf64.out)
 (deps ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "dwarfdump --print-str-offsets ../fixtures/hello_world_dwarf64_cpp"))))

(rule
 (alias runtest)
 (deps
  ocaml_dwarfdump_str_offsets_dwarf64.out
  system_dwarfdump_str_offsets_dwarf64.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff
   system_dwarfdump_str_offsets_dwarf64.out
   ocaml_dwarfdump_str_offsets_dwarf64.out)))

; --debug-aranges comparison (DWARF64)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_aranges_dwarf64.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-aranges
    ../fixtures/hello_world_dwarf64_cpp))))

(rule
 (alias runtest)
 (target system_dwarfdump_aranges_dwarf64.out)
 (deps ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump -r ../fixtures/hello_world_dwarf64_cpp"))))

(rule
 (alias runtest)
 (deps
  ocaml_dwarfdump_aranges_dwarf64.out
  system_dwarfdump_aranges_dwarf64.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff
   system_dwarfdump_aranges_dwarf64.out
   ocaml_dwarfdump_aranges_dwarf64.out)))

; --debug-addr comparison (DWARF64)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_addr_dwarf64.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-addr
    ../fixtures/hello_world_dwarf64_cpp))))

(rule
 (alias runtest)
 (target system_dwarfdump_addr_dwarf64.out)
 (deps ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "llvm-dwarfdump --debug-addr ../fixtures/hello_world_dwarf64_cpp"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_addr_dwarf64.out system_dwarfdump_addr_dwarf64.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_addr_dwarf64.out ocaml_dwarfdump_addr_dwarf64.out)))

; --debug-macro comparison (DWARF64)
; TODO: System dwarfdump does not support --print-macro option

; (rule
;  (alias runtest)
;  (target ocaml_dwarfdump_macro_dwarf64.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (run
;     %{bin:gnu-dwarfdump}
;     --debug-macro
;     ../fixtures/hello_world_dwarf64_cpp))))

; (rule
;  (alias runtest)
;  (target system_dwarfdump_macro_dwarf64.out)
;  (deps ../fixtures/hello_world_dwarf64_cpp)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-stdout-to
;    %{target}
;    (system
;     "dwarfdump --print-macro ../fixtures/hello_world_dwarf64_cpp"))))

; (rule
;  (alias runtest)
;  (deps
;   ocaml_dwarfdump_macro_dwarf64.out
;   system_dwarfdump_macro_dwarf64.out)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (diff
;    system_dwarfdump_macro_dwarf64.out
;    ocaml_dwarfdump_macro_dwarf64.out)))

; --debug-frame comparison (DWARF64)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_frame_dwarf64.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --debug-frame
    ../fixtures/hello_world_dwarf64_cpp))))

(rule
 (alias runtest)
 (target system_dwarfdump_frame_dwarf64.out)
 (deps ../fixtures/hello_world_dwarf64_cpp)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump --print-frame ../fixtures/hello_world_dwarf64_cpp"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_frame_dwarf64.out system_dwarfdump_frame_dwarf64.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (diff system_dwarfdump_frame_dwarf64.out ocaml_dwarfdump_frame_dwarf64.out)))

; =============================================================================
; UNWIND/EH_FRAME TESTS - LINUX
; =============================================================================

; --eh-frame comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_eh_frame.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --eh-frame ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_eh_frame.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump -F ../fixtures/hello_world_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_eh_frame.out system_dwarfdump_eh_frame.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (progn
   (run bash -c "grep -q '.eh_frame' ocaml_dwarfdump_eh_frame.out || exit 1")
   (run bash -c "grep -q 'fde:' ocaml_dwarfdump_eh_frame.out || exit 1")
   (run bash -c "grep -q 'cie:' ocaml_dwarfdump_eh_frame.out || exit 1")
   (run bash -c "grep -q 'cfa=' ocaml_dwarfdump_eh_frame.out || exit 1"))))

; --eh-frame comparison (C++ file)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_eh_frame_cpp.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --eh-frame ../fixtures/hello_world_cpp_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_eh_frame_cpp.out)
 (deps ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system "dwarfdump -F ../fixtures/hello_world_cpp_linux"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_eh_frame_cpp.out system_dwarfdump_eh_frame_cpp.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (progn
   (run
    bash
    -c
    "grep -q '.eh_frame' ocaml_dwarfdump_eh_frame_cpp.out || exit 1")
   (run bash -c "grep -q 'fde:' ocaml_dwarfdump_eh_frame_cpp.out || exit 1")
   (run bash -c "grep -q 'cie:' ocaml_dwarfdump_eh_frame_cpp.out || exit 1")
   (run bash -c "grep -q 'cfa=' ocaml_dwarfdump_eh_frame_cpp.out || exit 1"))))

; --eh-frame-hdr comparison

(rule
 (alias runtest)
 (target ocaml_dwarfdump_eh_frame_hdr.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:gnu-dwarfdump} --eh-frame-hdr ../fixtures/hello_world_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_eh_frame_hdr.out)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "echo '.eh_frame_hdr'; echo; echo 'Reference: hex dump from readelf -x .eh_frame_hdr'; readelf -x .eh_frame_hdr ../fixtures/hello_world_linux 2>/dev/null | tail -n +3 || echo 'No .eh_frame_hdr section found'"))))

(rule
 (alias runtest)
 (deps ocaml_dwarfdump_eh_frame_hdr.out system_dwarfdump_eh_frame_hdr.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (progn
   (run
    bash
    -c
    "grep -q '.eh_frame_hdr' ocaml_dwarfdump_eh_frame_hdr.out || exit 1")
   (run bash -c "test -s ocaml_dwarfdump_eh_frame_hdr.out || exit 1"))))

; --eh-frame-hdr comparison (C++ file)

(rule
 (alias runtest)
 (target ocaml_dwarfdump_eh_frame_hdr_cpp.out)
 (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:gnu-dwarfdump}
    --eh-frame-hdr
    ../fixtures/hello_world_cpp_linux))))

(rule
 (alias runtest)
 (target system_dwarfdump_eh_frame_hdr_cpp.out)
 (deps ../fixtures/hello_world_cpp_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (with-stdout-to
   %{target}
   (system
    "echo '.eh_frame_hdr'; echo; echo 'Reference: hex dump from readelf -x .eh_frame_hdr'; readelf -x .eh_frame_hdr ../fixtures/hello_world_cpp_linux 2>/dev/null | tail -n +3 || echo 'No .eh_frame_hdr section found'"))))

(rule
 (alias runtest)
 (deps
  ocaml_dwarfdump_eh_frame_hdr_cpp.out
  system_dwarfdump_eh_frame_hdr_cpp.out)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (progn
   (run
    bash
    -c
    "grep -q '.eh_frame_hdr' ocaml_dwarfdump_eh_frame_hdr_cpp.out || exit 1")
   (run bash -c "test -s ocaml_dwarfdump_eh_frame_hdr_cpp.out || exit 1"))))

; GNU-DWARFDUMP UNSUPPORTED SECTION TESTS - LINUX
; TODO Why are these tests commented out
; (rule
;  (alias runtest)
;  (target test_dwarfdump_abbrev_unsupported.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-accepted-exit-codes
;    1
;    (with-stdout-to
;     %{target}
;     (with-stderr-to
;      %{target}
;      (run
;       %{bin:gnu-dwarfdump}
;       --debug-abbrev
;       ../fixtures/hello_world_linux))))))

; (rule
;  (alias runtest)
;  (target test_dwarfdump_str_unsupported.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-accepted-exit-codes
;    1
;    (with-stdout-to
;     %{target}
;     (with-stderr-to
;      %{target}
;      (run
;       %{bin:gnu-dwarfdump}
;       --debug-str
;       ../fixtures/hello_world_linux))))))

; (rule
;  (alias runtest)
;  (target test_dwarfdump_str_offsets_unsupported.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-accepted-exit-codes
;    1
;    (with-stdout-to
;     %{target}
;     (with-stderr-to
;      %{target}
;      (run
;       %{bin:gnu-dwarfdump}
;       --debug-str-offsets
;       ../fixtures/hello_world_linux))))))

; (rule
;  (alias runtest)
;  (target test_dwarfdump_addr_unsupported.out)
;  (deps %{bin:gnu-dwarfdump} ../fixtures/hello_world_linux)
;  (enabled_if
;   (and
;    (= %{system} "linux")
;    (= %{architecture} "amd64")))
;  (action
;   (with-accepted-exit-codes
;    1
;    (with-stdout-to
;     %{target}
;     (with-stderr-to
;      %{target}
;      (run
;       %{bin:gnu-dwarfdump}
;       --debug-addr
;       ../fixtures/hello_world_linux))))))
